--- a/html/blog.html
+++ b/html/blog.html
@@ -80,15 +80,15 @@
             <aside class="aside">
                 <div class="publicidad">
                     <h4>aside</h4>
-                    <img src="/imagenes/fondoo.jpg" alt="">
+                    <iframe src="https://www.youtube.com/embed/6W1j9_J8OF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="publicidad">
                     <h4>aside</h4>
-                    <img src="/imagenes/fondoo.jpg" alt="">
+                    <iframe src="https://www.youtube.com/embed/6W1j9_J8OF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="publicidad">
                     <h4>aside</h4>
-                    <img src="/imagenes/fondoo.jpg" alt="">
+                    <iframe src="https://www.youtube.com/embed/6W1j9_J8OF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </aside>
         </main>
